Archive2/24/d17853550482d4/output
main.cpp:3:12: error: '::main' must return 'int'
 void main ()
            ^
