Archive2/24/d17853550482d4/main.cpp
#include <stdio.h>
#include<math.h>
void main ()
{ 
    int a,b,c ;
    printf("donner a");
    scanf("%d",&a);
    printf("donner b");
    scanf("%d",&b);
    c=(a+b)*(a+b);
    printf ("la solution est c");
   
}